Revert "Bugreport: fix it for now"   Not needed anymore it seems
This reverts commit 789d80eff35817574dbc7fd57cf3c168276cf423.